Update: Fix z-index problem and up info section

--- a/sass/components/_detail-box.scss
+++ b/sass/components/_detail-box.scss
@@ -7,7 +7,7 @@
   align-items: center;
   width: 100%;
   padding: 1rem;
-  z-index: 8;
+  z-index: 9;
   border-radius: 24px 24px 0 0;
   box-shadow: 0 -0.5rem 4rem rgba($color-dark, 0.2);
   @media screen and (min-width: 850px) {
