--- a/sass/components/_info.scss
+++ b/sass/components/_info.scss
@@ -1,32 +1,34 @@
 .info {
   padding: 2rem 2rem 4rem;
-  background-color: $color-light;
   position: relative;
   border-radius: 2px;
   &__buttons {
     position: absolute;
-    top: 0;
+    top: 3rem;
     display: flex;
     gap: 2rem;
     left: 50%;
     transform: translate(-50%, -50%);
     @media screen and (min-width: 608px) {
-      gap: 3rem;
+      gap: 2rem;
     }
   }
   &__btn {
+    border: none;
     flex-basis: 100%;
     background-color: $color-tertiary;
     display: flex;
     align-items: center;
     gap: 0.5rem;
     font-family: inherit;
-    border: none;
     padding: 0.5rem 1rem;
     border-radius: 40px;
     cursor: pointer;
     transition: all 0.2s;
-    box-shadow: 0 0 1rem rgba($color-dark, 0.2);
+    box-shadow: 0 -0.5rem 1rem rgba($color-dark, 0.2) inset;
+    &:hover{
+      box-shadow: 0 0.5rem 1rem rgba($color-dark, 0.2) inset;
+    }
     @media screen and (min-width: 850px) {
       padding: 1rem 2rem;
     }
@@ -57,6 +59,7 @@
   }
 
   &__section {
+    background-color: $color-light;
     display: none;
     transition: all 0.2s;
     width: 100%;
@@ -64,10 +67,10 @@
     margin: 6rem auto 0;
     padding: 3rem;
     border-radius: 10px;
-    box-shadow: 0 0 2rem rgba($color-dark, 0.1);
+    box-shadow: 0 0 2rem rgba($color-dark, 0.2);
     @media screen and (min-width: 850px) {
-        display: block;
-      }
+      display: block;
+    }
   }
   //   &__title{}
   &__list {
